--- a/week-2/in-class/q1/q1.html
+++ b/week-2/in-class/q1/q1.html
@@ -6,11 +6,15 @@
 </head>
 <body>
 
-    Name: <input type="text" id="fname"><br>
+Name: <input type="text" id="name"><br>
+Student ID: <input type="text" id="std-id"><br>
+Course: <input type="text" id="course"><br>
 
-    Student ID: <input type="text" id="std-id"><br>
-    Course: <input type="text" id="course"><br>
-    <input type="button" id="store" value="Save Details">
+
+<input type="button" id="store" value="Save Details"><br>
+<input type="button" id="clear" value="Clear Details"><br>
+<input type="button" id="get" value="Load Details"><br>
+<pre id="output"></pre>
 </body>
 <script src="q1.js"></script>
 </html>
