reading and displaying images & book information completed

--- a/ca-1/q1/bookstore.html
+++ b/ca-1/q1/bookstore.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4 left">
-                        <button class="btn btn-warning" id="clear-list">Clear List</button>
+                        <button class="btn btn-warning clear-list">Clear List</button>
                     </div>
                     <div class="col-md-4 center">
                         <a href="bookRetrieve.html" class="btn btn-primary" role="button">View Books</a>
@@ -63,8 +63,7 @@
         </div>
     </div>
 </div>
-<script
-        src="../js/jquery-3.1.1.min.js"></script>
+<script src="../js/jquery-3.1.1.min.js"></script>
 <script src="q1.js"></script>
 
 </body>
