--- a/ca-1/q1/bookstore.html
+++ b/ca-1/q1/bookstore.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 upload-image" id="book-cover">
-                        <p class="text-center">Drop book cover here</p>
+                        <p class="text-center">Drop book cover here, preferably in a 200 x 200 size</p>
                     </div>
 
                 </div>
@@ -45,12 +45,9 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4 left">
-                        <button class="btn btn-warning clear-list">Clear List</button>
-                    </div>
-                    <div class="col-md-4 center">
                         <a href="bookRetrieve.html" class="btn btn-primary" role="button">View Books</a>
                     </div>
-                    <div class="col-md-4 right">
+                    <div class="col-md-4 right col-md-offset-4">
                         <button class="btn btn-success" id="add-book">Add Book</button>
                     </div>
                 </div>
