shape build, need to complete smile

--- a/ca-1/q1/bookRetrieve.html
+++ b/ca-1/q1/bookRetrieve.html
@@ -28,7 +28,7 @@
 </div>
 
 
-<div class="row main book-record" style="display: none">
+<div class="row main book-record">
     <div class="panel panel-info">
         <div class="panel-heading">
             <h3 class="panel-title">Book Information<span class="glyphicon glyphicon-trash" aria-hidden="true"
