smiley face completed

--- a/ca-1/q2/Shapes.html
+++ b/ca-1/q2/Shapes.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="form-group">
                             <label for="line-colour">Line Colour</label>
-                            <input type="color" class="form-control" id="line-colour">
+                            <input type="color" class="form-control" id="line-colour" value="#ffffff">
                         </div>
                     </div>
                 </div>
