--- a/ca-1/q2/Render.html
+++ b/ca-1/q2/Render.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="../styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
 </head>
-<body style="width:800px; margin: 0 auto">
+<body id="body">
 <form>
     <button class="btn btn-primary" id="draw">Draw</button>
 </form>
-
-<canvas id="canvas" width=350 height=350 draggable="true" style="border: 1px solid"></canvas>
+<div class="row">
+    <div class="col-md-6">
+        <canvas id="canvas" width=350 height=350 draggable="true" style="border: 1px solid" class="removable"></canvas>
+    </div>
+    <div class="col-md-6">
+        <div id="delete" class="removable" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <span class="glyphicon glyphicon-trash" aria-hidden="true" style="font-size: 15em"></span>
+        </div>
+    </div>
+</div>
 <script src="../js/jquery-3.1.1.min.js"></script>
 <script src="script.js"></script>
 </body>
