--- a/ca-1/q2/Render.html
+++ b/ca-1/q2/Render.html
@@ -15,7 +15,7 @@
         <canvas id="canvas" width=350 height=350 draggable="true" style="border: 1px solid" class="removable"></canvas>
     </div>
     <div class="col-md-6">
-        <div id="delete" class="removable" ondrop="drop(event)" ondragover="allowDrop(event)">
+        <div id="delete-large" class="removable" ondrop="drop(event)" ondragover="allowDrop(event)">
             <span class="glyphicon glyphicon-trash" aria-hidden="true" style="font-size: 15em"></span>
         </div>
     </div>
