--- a/ca-1/q1/bookRetrieve.html
+++ b/ca-1/q1/bookRetrieve.html
@@ -32,7 +32,7 @@
     <div class="panel panel-info">
         <div class="panel-heading">
             <h3 class="panel-title">Book Information
-                <span class="glyphicon glyphicon-trash" aria-hidden="true" onclick="removeBook(this)" id="delete"></span>
+                <a href="#"><span class="glyphicon glyphicon-trash" aria-hidden="true" onclick="removeBook(this)" id="delete"></span></a>
             </h3>
         </div>
         <div class="panel-body">
