--- a/ca-1/q3/q3.html
+++ b/ca-1/q3/q3.html
@@ -42,7 +42,7 @@ I also made use of jqueryUI to give more easing effects for animation
             duration: time,
 
             step: function() {
-                $(this).css('-webkit-transform','rotate('+rotation+'deg)');
+                $(this).css('-webkit-transform','rotate('+rotation+'deg)')
             },
             easing: easing,
             complete: function() {
